Remove clinic query and replace it with Clinic1 by default
